--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.7.4",
     "@hookform/resolvers": "^4.0.0",
     "@prisma/client": "^6.3.1",
+    "@prisma/engines": "^6.3.1",
     "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.2",
+    "bcryptjs": "^3.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "next": "15.1.6",
+    "next-auth": "5.0.0-beta.25",
     "prisma": "^6.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -38,11 +42,6 @@
     "typescript": "^5"
   },
   "pnpm": {
-    "ignoredBuiltDependencies": [
-      "@prisma/engines",
-      "prisma",
-      "prisma"
-    ],
     "onlyBuiltDependencies": [
       "@prisma/client",
       "@prisma/engines"
