--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-progress": "^1.1.2",
+    "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
     "bcryptjs": "^3.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "country-state-city": "^3.2.1",
     "lucide-react": "^0.475.0",
     "next": "15.1.6",
     "next-auth": "5.0.0-beta.25",
@@ -33,6 +36,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
+    "react-select-country-list": "^2.2.3",
     "recharts": "^2.15.1",
     "resend": "^4.1.2",
     "tailwind-merge": "^3.0.1",
