Improve hotel form with file upload, validation, and server-side image handling

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,17 @@
 # production
 /build
 
+# images
+/public/uploads
+
+# rules cursor
+.cursorrules
+
+# frontend
+/frontend.mdc
+/backend.mdc
+/general.mdc
+
 # misc
 .DS_Store
 *.pem
