Refactor dashboard components and enhance authentication flow. Updated middleware for user permissions, improved sidebar navigation, and added flight management schema. Removed unused components and optimized imports.

--- a/.gitignore
+++ b/.gitignore
@@ -27,9 +27,11 @@
 .cursorrules
 
 # frontend
-/frontend.mdc
-/backend.mdc
-/general.mdc
+/.cursor/frontend.mdc
+/.cursor/*
+
+# backend
+/.cursor/backend.mdc
 
 # misc
 .DS_Store
