--- a/package.json
+++ b/package.json
@@ -28,15 +28,19 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@tanstack/react-table": "^8.21.2",
+    "amadeus": "^11.0.0",
     "bcryptjs": "^3.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "1.0.0",
     "country-state-city": "^3.2.1",
+    "date-fns": "^4.1.0",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.475.0",
     "next": "15.1.6",
     "next-auth": "5.0.0-beta.25",
-    "prisma": "^6.3.1",
     "react": "^19.0.0",
+    "react-day-picker": "8.10.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
@@ -51,6 +55,7 @@
     "@eslint/eslintrc": "^3",
     "@shadcn/ui": "^0.0.4",
     "@types/jest": "^29.5.14",
+    "@types/lodash": "^4.17.16",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
@@ -58,6 +63,7 @@
     "eslint-config-next": "15.1.6",
     "jest": "^29.7.0",
     "postcss": "^8",
+    "prisma": "^6.4.1",
     "tailwindcss": "^3.4.1",
     "ts-jest": "^29.2.5",
     "typescript": "^5"
