idk what's going on

--- a/package.json
+++ b/package.json
@@ -75,6 +75,11 @@
     "onlyBuiltDependencies": [
       "@prisma/client",
       "@prisma/engines"
+    ],
+    "ignoredBuiltDependencies": [
+      "esbuild",
+      "prisma",
+      "sharp"
     ]
   }
 }
